# multiEnv

./: Cargo.toml  license.txt  makefile  multiEnvrc.json  readme.md
src/: fileManagement.rs  main.rs
