[package]
name = "multiEnv"
version = "0.2.0"
edition = "2021"
authors = ["Thomas Martin <thomasolviermartin1998@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"